fixes in main and maven